[metadata]
name = nytext
version = 0.0.1
author = Dr. Matthias Hoelzl
author_email = tc@xantira.com
description = Some simple analysis of New York Times articles
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hoelzl/nytext
project_urls =
    Bug Tracker = https://github.com/hoelzl/nytext/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    typer>=0.4.0
    requests>=2.27.1
    fastapi>=0.75.1
    uvicorn>=0.17.6

[options.entry_points]
console_scripts:
    nytext = nytext.__main__:app